@@ -47,7 +47,6 @@ end_comment
 begin_class
 DECL|class|UsageTrackingQueryCachingPolicy
 specifier|public
-specifier|final
 class|class
 name|UsageTrackingQueryCachingPolicy
 implements|implements
@@ -170,21 +169,117 @@ name|query
 argument_list|)
 return|;
 block|}
-DECL|method|isCheap
+DECL|method|shouldNeverCache
+specifier|private
 specifier|static
 name|boolean
-name|isCheap
+name|shouldNeverCache
 parameter_list|(
 name|Query
 name|query
 parameter_list|)
 block|{
-comment|// same for cheap queries
-comment|// these queries are so cheap that they usually do not need caching
-return|return
+if|if
+condition|(
 name|query
 operator|instanceof
 name|TermQuery
+condition|)
+block|{
+comment|// We do not bother caching term queries since they are already plenty fast.
+return|return
+literal|true
+return|;
+block|}
+if|if
+condition|(
+name|query
+operator|instanceof
+name|MatchAllDocsQuery
+condition|)
+block|{
+comment|// MatchAllDocsQuery has an iterator that is faster than what a bit set could do.
+return|return
+literal|true
+return|;
+block|}
+comment|// For the below queries, it's cheap to notice they cannot match any docs so
+comment|// we do not bother caching them.
+if|if
+condition|(
+name|query
+operator|instanceof
+name|MatchNoDocsQuery
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+if|if
+condition|(
+name|query
+operator|instanceof
+name|BooleanQuery
+condition|)
+block|{
+name|BooleanQuery
+name|bq
+init|=
+operator|(
+name|BooleanQuery
+operator|)
+name|query
+decl_stmt|;
+if|if
+condition|(
+name|bq
+operator|.
+name|clauses
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+if|if
+condition|(
+name|query
+operator|instanceof
+name|DisjunctionMaxQuery
+condition|)
+block|{
+name|DisjunctionMaxQuery
+name|dmq
+init|=
+operator|(
+name|DisjunctionMaxQuery
+operator|)
+name|query
+decl_stmt|;
+if|if
+condition|(
+name|dmq
+operator|.
+name|getDisjuncts
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|return
+literal|false
 return|;
 block|}
 DECL|field|recentlyUsedFilters
@@ -193,7 +288,7 @@ specifier|final
 name|FrequencyTrackingRingBuffer
 name|recentlyUsedFilters
 decl_stmt|;
-comment|/**    * Create a new instance.    *    * @param historySize               the number of recently used filters to track    */
+comment|/**    * Expert: Create a new instance with a configurable history size. Beware of    * passing too large values for the size of the history, either    * {@link #minFrequencyToCache} returns low values and this means some filters    * that are rarely used will be cached, which would hurt performance. Or    * {@link #minFrequencyToCache} returns high values that are function of the    * size of the history but then filters will be slow to make it to the cache.    *    * @param historySize               the number of recently used filters to track    */
 DECL|method|UsageTrackingQueryCachingPolicy
 specifier|public
 name|UsageTrackingQueryCachingPolicy
@@ -215,7 +310,7 @@ name|SENTINEL
 argument_list|)
 expr_stmt|;
 block|}
-comment|/** Create a new instance with an history size of 256. */
+comment|/** Create a new instance with an history size of 256. This should be a good    *  default for most cases. */
 DECL|method|UsageTrackingQueryCachingPolicy
 specifier|public
 name|UsageTrackingQueryCachingPolicy
@@ -227,7 +322,7 @@ literal|256
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * For a given query, return how many times it should appear in the history    * before being cached.    */
+comment|/**    * For a given filter, return how many times it should appear in the history    * before being cached. The default implementation returns 2 for filters that    * need to evaluate against the entire index to build a {@link DocIdSetIterator},    * like {@link MultiTermQuery}, point-based queries or {@link TermInSetQuery},    * and 5 for other filters.    */
 DECL|method|minFrequencyToCache
 specifier|protected
 name|int
@@ -247,19 +342,6 @@ condition|)
 block|{
 return|return
 literal|2
-return|;
-block|}
-elseif|else
-if|if
-condition|(
-name|isCheap
-argument_list|(
-name|query
-argument_list|)
-condition|)
-block|{
-return|return
-literal|20
 return|;
 block|}
 else|else
@@ -295,6 +377,16 @@ name|ConstantScoreQuery
 operator|==
 literal|false
 assert|;
+if|if
+condition|(
+name|shouldNeverCache
+argument_list|(
+name|query
+argument_list|)
+condition|)
+block|{
+return|return;
+block|}
 comment|// call hashCode outside of sync block
 comment|// in case it's somewhat expensive:
 name|int
@@ -384,82 +476,15 @@ name|IOException
 block|{
 if|if
 condition|(
+name|shouldNeverCache
+argument_list|(
 name|query
-operator|instanceof
-name|MatchAllDocsQuery
-comment|// MatchNoDocsQuery currently rewrites to a BooleanQuery,
-comment|// but who knows, it might get its own Weight one day
-operator|||
-name|query
-operator|instanceof
-name|MatchNoDocsQuery
+argument_list|)
 condition|)
 block|{
 return|return
 literal|false
 return|;
-block|}
-if|if
-condition|(
-name|query
-operator|instanceof
-name|BooleanQuery
-condition|)
-block|{
-name|BooleanQuery
-name|bq
-init|=
-operator|(
-name|BooleanQuery
-operator|)
-name|query
-decl_stmt|;
-if|if
-condition|(
-name|bq
-operator|.
-name|clauses
-argument_list|()
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-return|return
-literal|false
-return|;
-block|}
-block|}
-if|if
-condition|(
-name|query
-operator|instanceof
-name|DisjunctionMaxQuery
-condition|)
-block|{
-name|DisjunctionMaxQuery
-name|dmq
-init|=
-operator|(
-name|DisjunctionMaxQuery
-operator|)
-name|query
-decl_stmt|;
-if|if
-condition|(
-name|dmq
-operator|.
-name|getDisjuncts
-argument_list|()
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-return|return
-literal|false
-return|;
-block|}
 block|}
 specifier|final
 name|int
