@@ -18,6 +18,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -146,6 +156,70 @@ init|=
 operator|new
 name|MatchAllDocsQuery
 argument_list|()
+decl_stmt|;
+name|UsageTrackingQueryCachingPolicy
+name|policy
+init|=
+operator|new
+name|UsageTrackingQueryCachingPolicy
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|1000
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|policy
+operator|.
+name|onUse
+argument_list|(
+name|q
+argument_list|)
+expr_stmt|;
+block|}
+name|assertFalse
+argument_list|(
+name|policy
+operator|.
+name|shouldCache
+argument_list|(
+name|q
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNeverCacheTermFilter
+specifier|public
+name|void
+name|testNeverCacheTermFilter
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Query
+name|q
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"bar"
+argument_list|)
+argument_list|)
 decl_stmt|;
 name|UsageTrackingQueryCachingPolicy
 name|policy
